# tanks

./: .gitignore  README.md  pytest.ini  requirements.txt  setup.cfg
tanks/: Bullet.py  Window.py  _version.py  run.py
tanks/TanksTypes/: ITank.py  Player.py  Tank1.py
