[metadata]
name = tanks
version = attr: tanks.__version__
description = A tanks game package
author = Yotam Maylat
author_email = yotammaylat@gmail.com
url = https://github.com/ioorik

classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent

[options]
python_requires = >=3.9
packages = find:
include_package_data = true
install_requires =
    pygame
    numpy

[options.packages.find]
include = tanks*


